@@ -1,3 +1,9 @@
+Wed Jun 29 23:42:51 2011  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* ext/date/date_core.c: avoided using timev.
+	* ext/date/date_strftime.c: ditto.
+	* ext/date/date_tmx.h: ditto.
+
 Wed Jun 29 23:17:57 2011  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* ext/openssl/ossl.h (OPENSSL_SYS_WIN32): support for mingw(msys).
